Fix some layout issues.
Make design more consistent with previously broken out tag.html

--- a/parse/public/css/demokratiappen.css
+++ b/parse/public/css/demokratiappen.css
@@ -11,70 +11,70 @@
 }
 
 .md-modal {
-    max-width: 480px;
-    max-height: 100%;
-    z-index: 2000;
-    backface-visibility: hidden;
-    margin: 0 auto;
+  max-width: 480px;
+  max-height: 100%;
+  z-index: 2000;
+  backface-visibility: hidden;
+  margin: 0 auto;
 }
 
 .md-show {
-    visibility: visible;
+  visibility: visible;
 }
 
 .md-overlay {
-    overflow: auto;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    visibility: hidden;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-    opacity: 0;
-    background: rgba(0,0,0,0.8);
-    transition: opacity 0.4s, visibility 0.4s;
+  overflow: auto;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  visibility: hidden;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  opacity: 0;
+  background: rgba(0,0,0,0.8);
+  transition: opacity 0.4s, visibility 0.4s;
 }
 
 .md-show.md-overlay {
-    opacity: 1;
-    visibility: visible;
+  opacity: 1;
+  visibility: visible;
 }
 
 .md-content {
-	color: #000;
-	background: #fff;
-	position: relative;
-	border-radius: 3px;
-	margin: 0 auto;
+  color: #000;
+  background: #fff;
+  position: relative;
+  border-radius: 3px;
+  margin: 0 auto;
   overflow: hidden;
   padding: 15px;
 }
 
 .md-content h3 {
-	margin: 0;
-	padding: 0.4em;
-	text-align: center;
-	font-size: 2.4em;
-	font-weight: 300;
-	opacity: 0.8;
-	background: rgba(0,0,0,0.1);
-	border-radius: 3px 3px 0 0;
+  margin: 0;
+  padding: 0.4em;
+  text-align: center;
+  font-size: 2.4em;
+  font-weight: 300;
+  opacity: 0.8;
+  background: rgba(0,0,0,0.1);
+  border-radius: 3px 3px 0 0;
 }
 
 h3.md-success {
-	margin: 0 0 20px 0;
-	background: #4f4;
+  margin: 0 0 20px 0;
+  background: #4f4;
 }
 
 h3.md-failure {
-	margin: 0 0 20px 0;
-	background: #f44;
+  margin: 0 0 20px 0;
+  background: #f44;
 }
 
 .md-content button {
-	margin: 0 auto;
-	font-size: 0.8em;
+  margin: 0 auto;
+  font-size: 0.8em;
   font-weight: bold;
 }
 
@@ -88,6 +88,23 @@ h3.md-failure {
 }
 
 .content {
-  width: 450px;
-  margin: 40px auto;
+  width: 45em;
+  margin: 1em auto;
+}
+
+.header {
+  overflow: auto;
+}
+.header h1 {
+  text-align: center
+}
+#loginName {
+  font-size: larger;
+  margin-left: 1em;
+  float: left
+}
+#logout {
+  font-size: larger;
+  margin-right: 3em;
+  float: right;
 }
